# libLogit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  libLogit.h  libLogit.py  setup.cfg  setup.py
.github/workflows/: alpha-matrix.yml
cmake/: libLogitConfig.cmake.in
docs/: burndown.md  configuration.md  issue-backlog.md  migration-v0.1-to-v0.2.md  sprint-0-plan.md
docs/adr/: 0001-alpha-packaging.md  0002-repo-layout.md  0003-binding-strategy.md  README.md
docs/api/: README.md
docs/bindings/: ada-beta-track.md  cpp.md  new-language.md
docs/decision-records/: README.md
docs/project/: beta-language-intake.md  issue-taxonomy.md
docs/releases/: v1.0.0-alpha.1-checklist.md  v1.0.0-alpha.1-rc-evidence.md  v1.0.0-alpha.1.md
docs/research/: logging-feature-survey.md
examples/: README.md
examples/c/: basic.c
examples/config/: invalid-extra-key.json  v2-basic.json  v2-buffering.json  v2-database.json  v2-directory-path.json  v2-failure-policy.json  v2-multi-logit.json  v2-redaction.json  v2-rotation.json
examples/cpp/: basic.cpp
examples/csharp/Basic/: Basic.csproj  Program.cs
examples/go/: basic.go
examples/java/: Basic.java
examples/javascript/: basic.js
examples/kotlin/: basic.kt
examples/python/: database.py
include/liblogit/: logit.h  logit.hpp
include/liblogit/c/: liblogit.h
include/liblogit/cpp/: libLogit.h
languages/ada/: liblogit.adb  liblogit.ads
languages/c/: liblogit.c  liblogit.h  test_logit.c
languages/cpp/: test_logit.cpp
languages/csharp/LibLogit/: LibLogit.csproj  Logit.cs  README.md
languages/csharp/LibLogit.Tests/: LibLogit.Tests.csproj  Program.cs
languages/go/: go.mod
languages/go/liblogit/: doc.go  logit.go  logit_test.go
languages/java/: pom.xml
languages/java/src/main/java/dev/liblogit/: LibLogIt.java  Logit.java
languages/java/src/test/java/dev/liblogit/: LogitTest.java
languages/javascript/: README.md  package.json
languages/javascript/src/: liblogit.js
languages/javascript/test/: liblogit.test.js
languages/kotlin/: pom.xml
languages/kotlin/src/main/kotlin/dev/liblogit/: LibLogItK.kt
languages/kotlin/src/test/kotlin/dev/liblogit/: LibLogItKTest.kt
libLogit.egg-info/: PKG-INFO  SOURCES.txt
liblogit/: __init__.py  builder.py  config.py  errors.py  events.py  formatters.py  internal_config.py  levels.py  logit.py  redaction.py  runtime.py  state.py  viewer.py
liblogit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
liblogit/data/: __init__.py  logit.sample.json
liblogit/sinks/: __init__.py  base.py
schema/: logit.schema.json  logit.v1.schema.json  logit.v2.schema.json
scripts/: check-hosted-ci.ps1  verify-alpha.ps1  verify-javascript-package-smoke.js  verify-python-wheel-smoke.py  verify-rc-local.ps1  verify-static.ps1
spec/: compatibility.md  levels.md  log-store.md  logit-object.md  sinks.md  streaming-api.md
tests/: test_python_conformance.py  test_python_logging.py  test_python_packaging.py
tests/conformance/: README.md
tests/conformance/fixtures/: basic_text_file.json  json_metadata.json  level_filtering.json
