[metadata]
name = liblogit
version = 0.1.0
description = JSON-configured multi-sink logging helpers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asparks1987/libLogit
author = Aryn M. Sparks
author_email = Aryn.sparks1987@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = logging, configuration, json

[options]
packages = find:
py_modules = libLogit
python_requires = >=3.9
include_package_data = True
install_requires =

[options.packages.find]
include = liblogit*

[options.package_data]
liblogit = data/*.json
