[metadata]
name = liblogit
version = 1.0.0a1
description = JSON-configured multi-sink logging helpers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asparks1987/libLogit
author = Aryn M. Sparks
author_email = Aryn.sparks1987@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = logging, configuration, json
project_urls =
    Documentation = https://github.com/asparks1987/libLogit#readme
    Source = https://github.com/asparks1987/libLogit
    Tracker = https://github.com/asparks1987/libLogit/issues

[options]
packages = find:
py_modules = libLogit
python_requires = >=3.9
include_package_data = True
install_requires =

[options.packages.find]
include = liblogit*

[options.package_data]
liblogit = py.typed
liblogit.data = *.json

[options.extras_require]
dev =
    jsonschema
    mypy
    pytest
    ruff

[options.data_files]
share/liblogit/schema =
    schema/logit.schema.json
    schema/logit.v1.schema.json
    schema/logit.v2.schema.json
share/liblogit/examples/config =
    examples/config/v1-legacy.json
    examples/config/v2-basic.json
    examples/config/v2-buffering.json
    examples/config/v2-database.json
    examples/config/v2-directory-path.json
    examples/config/v2-failure-policy.json
    examples/config/v2-redaction.json
    examples/config/v2-rotation.json
    examples/config/v2-multi-logit.json

[options.entry_points]
console_scripts =
    liblogit-viewer = liblogit.viewer:main
